some more improvements
