# swagger.yaml
@@ -56,10 +56,17 @@ paths:
                         type: string
                       number:
                         type: number
-                  chainHealth:
+                  health:
                     description: A simple enum to indicate whether the subnet chain is operational. i.e if blocks are mined
-                    type: string
-                    enum: [UP, DOWN]
+                    type: object
+                    properties:
+                      status:
+                        description: An enum value to indicate the current chain status.
+                        type: string
+                        enum: [UP, DOWN]
+                      details:
+                        description: A short description about the current running status when there is an issue. E.g System is running but very low
+                        type: string
                     
         '400':
           description: 'Bad Request'
@@ -133,6 +140,9 @@ paths:
                   backlog:
                     description: The current gap between audited block in smartcontract (parent chain) and latest minded block in subnet 
                     type: integer
+                  averageTXfee:
+                    description: Average Transaction fee on relayer
+                    type: number
                   contractAddress:
                     type: string
                   health:
@@ -171,6 +181,9 @@ paths:
                   subnet:
                     type: object
                     properties:
+                      name:
+                        description: Subnet Chain name
+                        type: string
                       block:
                         description: block metadata, such as mining frequency
                         type: object
